# vlc-android

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.yml  .lgtm.yml  .mailmap  HOWTO  Makefile  NEWS  README.md  build-common  build.gradle  compile-libvlc.sh  compile-medialibrary.sh  compile-old.sh  compile-simple.sh  compile.sh  compileLibvlcjni.sh  configure.sh  configure_libvlcjni.sh  copyLibVLC.sh  dump-libs.sh  find_modules.sh  gdb.sh  gen-env.sh  gradle.properties  install.sh  publish.gradle  rename_package.sh  settings.gradle
.tx/: config
android-libs/: dump-libs.sh  libbinder.symbols  libcutils.symbols  libhardware.symbols  libmedia.symbols  libstagefright.symbols  libui.symbols  libutils.symbols
api/: build.gradle  proguard-rules.pro
app/: build.gradle
buildsystem/: compile-libvlc.sh  compile-medialibrary.sh  compile-remoteaccess.sh  compile.sh  publish.gradle
captures/: org.videolan.vlc.debug_2017.01.09_18.08.li
extension-api/: build.gradle
gcc/: binutils-2.21.diff  gcc-4.6.patch  rebuild-gcc.sh
java-libs/: .gitignore
libvlc/: .gitignore  AndroidManifest.xml  build.gradle  build.xml  gdb.sh  gradle.properties  libvlcjni.sym  project.properties
live-plot-graph/: build.gradle
mediadb/: build.gradle
medialibrary/: AndroidManifest.xml  build.gradle  gradle.properties
medialibrary/jni/: Android.mk  AndroidDeviceLister.cpp  AndroidDeviceLister.h  AndroidMediaLibrary.cpp  AndroidMediaLibrary.h  CMakeLists.txt  log.h  medialibrary.cpp  utils.cpp  utils.h
moviepedia/: build.gradle
patches/: 0001-Android-add-compatibility-pthread_cancel.patch  0001-Revert-aout-do-not-block-thread-changing-volume-mute.patch  0001-android-threads-support.patch  0001-libavcodec-add-NEON-runtime-autodetection.patch  0002-Android-add-native-AudioTrack-aout-module.patch  0002-Android-use-a-custom-poll-fixes-HTTP-playback.patch  0002-FFmpeg-allow-runtime-NEON-detection.patch  0002-Implement-rw_locks-needed-for-Android-2.2-and-below.patch  0002-android-add-native-AudioTrack-aout-module.patch  0002-libavcodec-add-NEON-runtime-autodetection.patch  0002-libvlc-add-language-and-frame-rate-to-libvlc_media_t.patch  0003-Audiotrack-Implement-Flush.patch  0003-Contribs-add-an-option-to-optimize-a-bit-for-the-siz.patch  0003-No-dtv-on-Android.patch  (+31 more)
pkgs/: libvlc.pc.in  (+1 more)
(+5274 files in other folders)
